Crosslink Kris's LW/DW rooms to each other
Also add notes to some of the LW sources

--- a/locations/closetworld/castle/krisroom.html
+++ b/locations/closetworld/castle/krisroom.html
@@ -18,6 +18,9 @@ sources:
 
 see_also:
   -
+    url: /locations/lightworld/dreemurrresidence/krisroom
+    name: Kris's room in the Light World
+  -
     url: /locations/closetworld/castle/krissusieroom
     name: Kris and Susie's combined room (Chapter 4)
   -
