--- a/locations/lightworld/dreemurrresidence/krisroom.html
+++ b/locations/lightworld/dreemurrresidence/krisroom.html
@@ -17,11 +17,16 @@ sources:
   -
     name: gml_GlobalScript_scr_text
     chapters: [1, 2, 4]
+    note: choices
   -
     name: gml_Object_obj_ch4_PDC01D_Step_0
     chapters: [4]
+    note: Susie prize/bloodstain scenes
 
 see_also:
+  -
+    url: /locations/lightworld/dreemurrresidence/krisroom
+    name: Kris's room in the Light World
   -
     url: /locations/lightworld#dreemurrresidence
     name: Sublocations within the Dreemurr residence
