Document Queen's Castle Town room
Add hallways to TODO as well

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -44,6 +44,9 @@ items:
         name: 3F
         sublist:
           -
+            url: queenroom
+            name: Queen's room
+          -
             url: ralseiroom
             name: Ralsei's room
 ---
