Ralsei's room: Add outside hallway link

--- a/locations/closetworld/castle/ralseiroom.html
+++ b/locations/closetworld/castle/ralseiroom.html
@@ -26,6 +26,9 @@ see_also:
     url: /story/chapter4/ralseiroom
     name: Discovery cutscene
   -
+    url: /locations/closetworld/castle/3F
+    name: Outside hallway
+  -
     url: /locations/closetworld/castle/krisroom
     name: Kris's room
   -
