--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -44,6 +44,9 @@ items:
         name: 3F
         sublist:
           -
+            url: 3F
+            name: Hallway
+          -
             url: queenroom
             name: Queen's room
           -
