Document Tenna's Castle Town room

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -50,6 +50,9 @@ items:
             url: queenroom
             name: Queen's room
           -
+            url: tennaroom
+            name: Tenna's room
+          -
             url: ralseiroom
             name: Ralsei's room
 ---
