Move Mancountry location to subdirectory
Need the structure for breadcrumbs

--- a/locations/tvworld/index.html
+++ b/locations/tvworld/index.html
@@ -54,11 +54,7 @@ items:
       -
         url: interstitial
         name: Interstitial space{END_LINK} (to the west)
-  -
-    id: other
-    name: Other
-    sublist:
       -
         url: mancountry
-        name: Mancountry
+        name: Mancountry{END_LINK} (hidden area)
 ---
