Document Ralsei's castle 2F hallway

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -29,6 +29,9 @@ items:
         name: 2F
         sublist:
           -
+            url: 2F
+            name: Hallway
+          -
             url: krisroom
             name: Kris's room
           -
