Tenna's CT room: Add missing source

--- a/locations/closetworld/castle/tennaroom.html
+++ b/locations/closetworld/castle/tennaroom.html
@@ -15,9 +15,13 @@ see_also:
 
 sources:
   -
+    name: gml_Object_obj_room_castle_tenna_Step_0
+    chapters: [4]
+    note: Tenna (first)
+  -
     name: gml_Object_obj_npc_room_animated_Other_10
     chapters: [4]
-    note: Tenna
+    note: Tenna (subsequent)
   -
     name: gml_Object_obj_npc_room_Other_10
     chapters: [4]
