Green Room: Fix Ramb's link to Pippins

--- a/locations/tvworld/greenroom/index.html
+++ b/locations/tvworld/greenroom/index.html
@@ -768,7 +768,7 @@ toc:
 	<p class="note">Ramb has been petrified.</p>
 
 	<h4>First time</h4>
-	<p class="note"><a href="#pippins-postbonusround">See Pippins's section above.</a></p>
+	<p class="note"><a href="#pippins-bonus">See Pippins's section above.</a></p>
 
 	<h4>Subsequent times</h4>
 	<d-box theme="dark">
