Remove location qualifiers in page titles
E.g. turn "Ralsei's castle - Susie's room" to just "Susie's room", since "Ralsei's castle" is specified in the breadcrumbs above.

Did some similar cleanup on the see-also links, and removed the "sublocations in [parent location]" again since the breadcrumbs link to that already

--- a/locations/closetworld/castle/2F.html
+++ b/locations/closetworld/castle/2F.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - 2F hallway
+title: 2F hallway
 
 description: >
   <p>Narration and dialogue for the second floor hallway of Ralsei's castle in Castle Town.</p>
