--- a/locations/closetworld/castle/3F.html
+++ b/locations/closetworld/castle/3F.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - 3F hallway
+title: 3F hallway
 
 description: >
   <p>Narration and dialogue for the third floor hallway of Ralsei's castle in Castle Town.</p>
