--- a/locations/closetworld/castle/krisroom.html
+++ b/locations/closetworld/castle/krisroom.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - Kris's room
+title: Kris's room (Dark World)
 
 description: >
   <p>Narration and dialogue for Kris's room in Ralsei's castle, 2F.</p>
