--- a/locations/closetworld/castle/krissusieroom.html
+++ b/locations/closetworld/castle/krissusieroom.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - Kris and Susie's combined room
+title: Kris and Susie's combined room
 
 description: >
   <p>Narration and dialogue for Kris and Susie's combined room in Ralsei's castle, 2F, during Chapter 4.</p>
