--- a/locations/closetworld/castle/lancerroom.html
+++ b/locations/closetworld/castle/lancerroom.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - Lancer's room
+title: Lancer's room
 
 description: >
   <p>Narration and dialogue for Lancer's room in Castle Town.</p>
