--- a/locations/closetworld/castle/queenroom.html
+++ b/locations/closetworld/castle/queenroom.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - Queen's room
+title: Queen's room
 
 description: >
   <p>Narration and dialogue for Queen's room in Castle Town.</p>
