--- a/locations/closetworld/castle/ralseiroom.html
+++ b/locations/closetworld/castle/ralseiroom.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - Ralsei's room
+title: Ralsei's room
 
 description: >
   <p>Narration and dialogue for Ralsei's room in his castle, 3F.</p>
