--- a/locations/closetworld/castle/susieroom.html
+++ b/locations/closetworld/castle/susieroom.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - Susie's room
+title: Susie's room
 
 description: >
   <p>Narration and dialogue for Susie's room in Ralsei's castle, 2F.</p>
