--- a/locations/closetworld/castle/tennaroom.html
+++ b/locations/closetworld/castle/tennaroom.html
@@ -1,5 +1,5 @@
 ---
-title: Ralsei's castle - Tenna's room
+title: Tenna's room
 
 description: >
   <p>Narration and dialogue for Tenna's room in Castle Town.</p>
