--- a/locations/cyberworld/index.html
+++ b/locations/cyberworld/index.html
@@ -32,7 +32,7 @@ items:
     name: Queen's Mansion
     sublist:
       -
-        name: 1F
+        name: Floor 1F
         sublist:
           -
             url: guesthall
@@ -48,10 +48,10 @@ items:
             name: 1F proper{END_LINK} (east wing)
       -
         url: 2F
-        name: 2F
+        name: Floor 2F
       -
         url: 4F
-        name: 4F
+        name: Floor 4F
       -
         url: basement
         name: Basement
