--- a/locations/cyberworld/queenmansion/1F.html
+++ b/locations/cyberworld/queenmansion/1F.html
@@ -1,5 +1,5 @@
 ---
-title: Queen's mansion - 1F
+title: Floor 1F
 
 description: >
   <p>Narration and dialogue for the first floor of the east wing of Queen's mansion.</p>
@@ -10,10 +10,13 @@ credits: >
 see_also:
   -
     url: /locations/cyberworld/queenmansion/entrance
-    name: Queen's mansion - Entrance
+    name: Mansion entrance
+  -
+    url: /locations/cyberworld/queenmansion/2F
+    name: 2F{END_LINK} (upstairs)
   -
     url: /locations/cyberworld/queenmansion/basement
-    name: Queen's mansion - Basement
+    name: Basement
 
 sources:
   -
