--- a/locations/cyberworld/queenmansion/2F.html
+++ b/locations/cyberworld/queenmansion/2F.html
@@ -1,5 +1,5 @@
 ---
-title: Queen's mansion - 2F
+title: Floor 2F
 
 description: >
   <p>Narration and dialogue for the second floor of Queen's mansion.</p>
@@ -10,10 +10,10 @@ credits: >
 see_also:
   -
     url: /locations/cyberworld/queenmansion/1F
-    name: Queen's mansion - 1F
+    name: 1F{END_LINK} (downstairs)
   -
     url: /locations/cyberworld/queenmansion/3F
-    name: Queen's mansion - 3F
+    name: 3F{END_LINK} (upstairs)
 
 sources:
   -
