--- a/locations/cyberworld/queenmansion/4F.html
+++ b/locations/cyberworld/queenmansion/4F.html
@@ -1,5 +1,5 @@
 ---
-title: Queen's mansion - 4F
+title: Floor 4F
 
 description: >
   <p>Narration and dialogue for the fourth floor of Queen's mansion, its roof.</p>
@@ -10,7 +10,7 @@ credits: >
 see_also:
   -
     url: /locations/cyberworld/queenmansion/3F
-    name: Queen's mansion - 3F
+    name: 3F{END_LINK} (downstairs)
 
 sources:
   -
