--- a/locations/cyberworld/queenmansion/colorcafe.html
+++ b/locations/cyberworld/queenmansion/colorcafe.html
@@ -15,7 +15,7 @@ see_also:
 #     for: responses to specific actions not specified on this page
   -
     url: /locations/cyberworld/queenmansion/entrance
-    name: Queen's mansion - Entrance
+    name: Mansion entrance
 
 sources:
   -
