--- a/locations/lightworld/dreemurrresidence/bathroom.html
+++ b/locations/lightworld/dreemurrresidence/bathroom.html
@@ -1,5 +1,5 @@
 ---
-title: Dreemurr residence - Bathroom
+title: Bathroom
 
 description: >
   <p>Narration and dialogue for the bathroom in the Dreemurr residence.</p>
@@ -24,8 +24,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#dreemurrresidence
-    name: Sublocations within the Dreemurr residence
+    url: /locations/lightworld/dreemurrresidence/downstairs
+    name: Kitchen and living room{END_LINK} (outside bathroom)
 
 toc:
   -
