--- a/locations/lightworld/dreemurrresidence/downstairs.html
+++ b/locations/lightworld/dreemurrresidence/downstairs.html
@@ -1,5 +1,5 @@
 ---
-title: Dreemurr residence - Downstairs
+title: Downstairs
 
 description: >
   <p>Narration and dialogue for the kitchen and living room in the Dreemurr residence.</p>
@@ -24,8 +24,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#dreemurrresidence
-    name: Sublocations within the Dreemurr residence
+    url: /locations/lightworld/dreemurrresidence/hallway
+    name: Upstairs hallway
 
 toc:
   -
