--- a/locations/lightworld/dreemurrresidence/hallway.html
+++ b/locations/lightworld/dreemurrresidence/hallway.html
@@ -1,5 +1,5 @@
 ---
-title: Dreemurr residence - Upstairs hallway
+title: Upstairs hallway
 
 description: >
   <p>Narration and dialogue for the upstairs hallway in the Dreemurr residence.</p>
@@ -17,8 +17,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#dreemurrresidence
-    name: Sublocations within the Dreemurr residence
+    url: /locations/lightworld/dreemurrresidence/downstairs
+    name: Downstairs{END_LINK} (kitchen and living room)
 
 toc:
   -
