--- a/locations/lightworld/dreemurrresidence/krisroom.html
+++ b/locations/lightworld/dreemurrresidence/krisroom.html
@@ -1,5 +1,5 @@
 ---
-title: Dreemurr residence - Kris's room
+title: Kris's room (Light World)
 
 description: >
   <p>Narration and dialogue for Kris's (and Asriel's) room in the Dreemurr residence.</p>
@@ -25,11 +25,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld/dreemurrresidence/krisroom
-    name: Kris's room in the Light World
-  -
-    url: /locations/lightworld#dreemurrresidence
-    name: Sublocations within the Dreemurr residence
+    url: /locations/closetworld/castle/krisroom
+    name: Kris's room in the Dark World
 
 toc:
   -
