--- a/locations/lightworld/dreemurrresidence/yard.html
+++ b/locations/lightworld/dreemurrresidence/yard.html
@@ -1,5 +1,5 @@
 ---
-title: Dreemurr residence - Front yard
+title: Front yard
 
 description: >
   <p>Narration and dialogue for the front yard of the Dreemurr residence.</p>
@@ -19,8 +19,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#dreemurrresidence
-    name: Sublocations within the Dreemurr residence
+    url: /locations/lightworld/dreemurrresidence/downstairs
+    name: Inside the Dreemurr residence
 
 toc:
   -
