--- a/locations/lightworld/holidayresidence/closet.html
+++ b/locations/lightworld/holidayresidence/closet.html
@@ -1,5 +1,5 @@
 ---
-title: Holiday residence - Closet
+title: Closet
 
 description: >
   <p>Narration and dialogue for the closet holding gift boxes in Noelle's house, 1F.</p>
@@ -14,8 +14,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#holidayresidence
-    name: Sublocations within the Holiday residence
+    url: /locations/lightworld/holidayresidence/interior
+    name: Holiday residence interior{END_LINK} (outside closet)
 
 toc:
   -
