--- a/locations/lightworld/holidayresidence/interior.html
+++ b/locations/lightworld/holidayresidence/interior.html
@@ -1,5 +1,5 @@
 ---
-title: Holiday residence - Interior
+title: Holiday residence interior
 
 description: >
   <p>Narration and dialogue for the living room (1F) and hallways (2F/3F) of Noelle's house.</p>
@@ -22,8 +22,17 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#holidayresidence
-    name: Sublocations within the Holiday residence
+    url: /locations/lightworld/holidayresidence/closet
+    name: Gift box closet{END_LINK} (1F)
+  -
+    url: /locations/lightworld/holidayresidence/kitchen
+    name: Kitchen{END_LINK} (1F)
+  -
+    url: /locations/lightworld/holidayresidence/noelleroom
+    name: Noelle's room{END_LINK} (2F)
+  -
+    url: /locations/lightworld/holidayresidence/dessroom
+    name: Dess's room{END_LINK} (2F)
 
 toc:
   -
