--- a/locations/lightworld/holidayresidence/kitchen.html
+++ b/locations/lightworld/holidayresidence/kitchen.html
@@ -1,5 +1,5 @@
 ---
-title: Holiday residence - Kitchen & dining room
+title: Kitchen & dining room
 
 description: >
   <p>Narration and dialogue for the kitchen and dining room in Noelle's house, 1F.</p>
@@ -18,8 +18,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#holidayresidence
-    name: Sublocations within the Holiday residence
+    url: /locations/lightworld/holidayresidence/interior
+    name: Holiday residence interior{END_LINK} (outside kitchen)
 
 toc:
   -
