--- a/locations/lightworld/holidayresidence/noelleroom.html
+++ b/locations/lightworld/holidayresidence/noelleroom.html
@@ -1,5 +1,5 @@
 ---
-title: Holiday residence - Noelle's room
+title: Noelle's room
 
 description: >
   <p>Narration and dialogue for Noelle's room in the Holiday residence.</p>
@@ -18,8 +18,11 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#holidayresidence
-    name: Sublocations within the Holiday residence
+    url: /locations/lightworld/holidayresidence/interior
+    name: Holiday residence interior{END_LINK} (outside room)
+  -
+    url: /locations/cyberworld/queenmansion/4F#noelleroom
+    name: Noelle's room in Queen's mansion
 
 toc:
   -
