--- a/locations/lightworld/school/alphysclass.html
+++ b/locations/lightworld/school/alphysclass.html
@@ -1,5 +1,5 @@
 ---
-title: School - Alphys's classroom
+title: Alphys's classroom
 
 description: >
   <p>Narration and dialogue for Alphys's classroom in the Hometown school.</p>
@@ -14,8 +14,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#school
-    name: Sublocations within the Hometown school
+    url: /locations/lightworld/school/hallways
+    name: School hallways
 
 toc:
   -
