--- a/locations/lightworld/school/hallways.html
+++ b/locations/lightworld/school/hallways.html
@@ -1,5 +1,5 @@
 ---
-title: School - Hallways
+title: Hallways
 
 description: >
   <p>Narration and dialogue for the lobby and hallways of the Hometown school.</p>
@@ -14,8 +14,17 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#school
-    name: Sublocations within the Hometown school
+    url: /locations/lightworld/school/alphysclass
+    name: Alphys's classroom
+  -
+    url: /locations/lightworld/school/torielclass
+    name: Toriel's classroom
+  -
+    url: /locations/lightworld/school/unusedclass
+    name: Unused classroom
+  -
+    url: /locations/closetworld/
+    name: Closet Dark World{END_LINK} - the Dark World located in the supply closet
 
 toc:
   -
