--- a/locations/lightworld/school/unusedclass.html
+++ b/locations/lightworld/school/unusedclass.html
@@ -1,5 +1,5 @@
 ---
-title: School - Unused classroom
+title: Unused classroom
 
 description: >
   <p>Narration and dialogue for the unused classroom in the Hometown school.</p>
@@ -18,8 +18,11 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#school
-    name: Sublocations within the Hometown school
+    url: /locations/lightworld/school/hallways
+    name: School hallways
+  -
+    url: /locations/cardkingdom/
+    name: Card Kingdom{END_LINK} - the Dark World formerly located here
 ---
 <section class="d-section" id="leftdoor">
 	<h2>Left door</h2>
