--- a/locations/cyberworld/queenmansion/basement.html
+++ b/locations/cyberworld/queenmansion/basement.html
@@ -1,5 +1,5 @@
 ---
-title: Queen's mansion - Basement
+title: Basement
 
 description: >
   <p>Narration for the basement of Queen's mansion, where the mysterious machine is found.</p>
