--- a/locations/cyberworld/queenmansion/entrance.html
+++ b/locations/cyberworld/queenmansion/entrance.html
@@ -1,5 +1,5 @@
 ---
-title: Queen's mansion - Entrance
+title: Mansion entrance
 
 description: >
   <p>Narration and dialogue for the entrance hall of Queen's mansion.</p>
