--- a/locations/cyberworld/queenmansion/guesthall.html
+++ b/locations/cyberworld/queenmansion/guesthall.html
@@ -1,5 +1,5 @@
 ---
-title: Queen's mansion - Guest Hall
+title: Guest Hall
 
 description: >
   <p>Text and narration for the guest area in the west wing of Queen's mansion.</p>
@@ -159,7 +159,7 @@ toc:
 see_also:
   -
     url: /locations/cyberworld/queenmansion/entrance
-    name: Queen's mansion - Entrance
+    name: Mansion entrance
 ---
 <section class="d-section" id="krisroom">
 	<h2>Kris's room</h2>
