--- a/locations/lightworld/holidayresidence/dessroom.html
+++ b/locations/lightworld/holidayresidence/dessroom.html
@@ -1,5 +1,5 @@
 ---
-title: Holiday residence - Dess's room
+title: Dess's room
 
 description: >
   <p>Narration and dialogue for Dess's room in the Holiday residence.</p>
@@ -18,8 +18,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#holidayresidence
-    name: Sublocations within the Holiday residence
+    url: /locations/lightworld/holidayresidence/interior
+    name: Holiday residence interior{END_LINK} (outside room)
 
 toc:
   -
