--- a/locations/lightworld/school/torielclass.html
+++ b/locations/lightworld/school/torielclass.html
@@ -1,5 +1,5 @@
 ---
-title: School - Toriel's classroom
+title: Toriel's classroom
 
 description: >
   <p>Narration and dialogue for Toriel's classroom in the Hometown school.</p>
@@ -17,8 +17,8 @@ sources:
 
 see_also:
   -
-    url: /locations/lightworld#school
-    name: Sublocations within the Hometown school
+    url: /locations/lightworld/school/hallways
+    name: School hallways
 
 toc:
   -
