Document Ralsei's castle 1F entrance hall

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -26,7 +26,13 @@ items:
     name: Ralsei's castle
     sublist:
       -
-        name: 2F
+        name: Floor 1F
+        sublist:
+          -
+            url: 1F
+            name: Entrance hall
+      -
+        name: Floor 2F
         sublist:
           -
             url: 2F
@@ -44,7 +50,7 @@ items:
             url: lancerroom
             name: Lancer's room
       -
-        name: 3F
+        name: Floor 3F
         sublist:
           -
             url: 3F
