Make URLs relative

--- a/encounters/shuttahtvworld.html
+++ b/encounters/shuttahtvworld.html
@@ -508,7 +508,7 @@ Unused encounters with blank text:
 
 	<hr>
 
-	<h3 id="photo-unused-success">Successfully photographing <a href="{{ '/encounters/shuttahislandboard#photo-susie' }}">Susie exploding a toilet</a> / <a href="{{ '/encounters/shuttahislandboard#photo-heroes' }}">the group</a></h4>
+	<h3 id="photo-unused-success">Successfully photographing <a href="{{ '/encounters/shuttahislandboard#photo-susie' | relative_url }}">Susie exploding a toilet</a> / <a href="{{ '/encounters/shuttahislandboard#photo-heroes' | relative_url }}">the group</a></h4>
 	<p>Unused since these specific challenges aren't included in the non-miniboss version of Shuttah's fights.</p>
 	<p class="note">At random:</p>
 	<hr class="hr2">
