--- a/misc/powermenu.html
+++ b/misc/powermenu.html
@@ -764,7 +764,7 @@ toc:
 		</tr>
 	</table>
 
-	<h5>After meeting Ralsei in the Dark Sanctuary and before <a href="{{ '/story/chapter4/darkzone#postfight-susie' }}">healing Jackenstein</a> </h5>
+	<h5>After meeting Ralsei in the Dark Sanctuary and before <a href="{{ '/story/chapter4/darkzone#postfight-susie' | relative_url }}">healing Jackenstein</a> </h5>
 	<table class="powerspells">
 		<tr class="visually-hidden">
 			<th>Name</th>
