Document Ralsei's castle courtyard

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -29,6 +29,9 @@ items:
         name: Floor 1F
         sublist:
           -
+            url: courtyard
+            name: Front courtyard
+          -
             url: 1F
             name: Entrance hall
       -
