Document Ralsei's basement dungeon

--- a/locations/closetworld/castle/1F.html
+++ b/locations/closetworld/castle/1F.html
@@ -15,8 +15,8 @@ see_also:
     url: /locations/closetworld/castle/courtyard
     name: Courtyard{END_LINK} (outside)
   -
-    url: /locations/closetworld/castle/BF
-    name: Castle basement{END_LINK} (downstairs)
+    url: /locations/closetworld/castle/dungeon
+    name: Dungeons{END_LINK} (downstairs)
 
 sources:
   -
