--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -67,4 +67,7 @@ items:
           -
             url: ralseiroom
             name: Ralsei's room
+      -
+        url: dungeon
+        name: Floor BF{END_LINK} - Dungeons
 ---
