Differentiate Seap titles

--- a/locations/cardkingdom/field/seap.html
+++ b/locations/cardkingdom/field/seap.html
@@ -1,8 +1,8 @@
 ---
-title: Seam's old Seap
+title: Seap (Field)
 
 description: >
-  <p>Text and dialogue from Seam's storefront in the Card Kingdom.</p>
+  <p>Text and dialogue from Seam's storefront in the Card Kingdom, now gone with the sealing of the Card Kingdom's Fountain.</p>
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
