--- a/locations/cardkingdom/index.html
+++ b/locations/cardkingdom/index.html
@@ -14,7 +14,7 @@ items:
     sublist:
       -
         url: seap
-        name: Seam's (old) shop
+        name: Seap{END_LINK} - Seam's shop
   -
     url: forest
     name: Forest
