--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -14,7 +14,7 @@ items:
     sublist:
       -
         url: seap
-        name: Seam's shop
+        name: Seap{END_LINK} - Seam's storefront
       -
         url: cafe
         name: Café
