--- a/locations/closetworld/town/seap.html
+++ b/locations/closetworld/town/seap.html
@@ -1,8 +1,8 @@
 ---
-title: Seam's Seap
+title: Seap (Castle Town)
 
 description: >
-  <p>Text and dialogue from Seam's storefront in Castle Town.</p>
+  <p>Text and dialogue from Seam's storefront in the supply closet Dark World.</p>
 
 credits: >
   <p>Compiled by wovenstarlight.</p>
