Document Party Dojo

--- a/locations/closetworld/index.html
+++ b/locations/closetworld/index.html
@@ -19,6 +19,9 @@ items:
         url: cafe
         name: Café
       -
+        url: partydojo
+        name: Party Dojo{END_LINK} <small>(a.k.a. Love Dojo)</small>
+      -
         url: topbakery
         name: Top Bakery
   -
